--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
     </p>
   </div>
-  <h1>Hello World</h1>
+  <h1>Hello World!</h1>
   <h2>Welcome to my site</h2>
   <img src="img\download.jpg" width="200">
   <p>I am currently learning to code with Code First Girls Going over everything from how the internet works, to creating websites and version control with git. A lot to cover in only 8 weeks! Everyone should learn to code, here are some pretty good reasons why...</p>
